--- a/Topic Modelling and Sentiment Analysis/TMSA - POS and NER/P5b POS and NER.ipynb
+++ b/Topic Modelling and Sentiment Analysis/TMSA - POS and NER/P5b POS and NER.ipynb
@@ -65,7 +65,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - defaults\n",
+      " - conda-forge\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: C:\\Users\\wongw\\anaconda3\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - pandas\n",
+      "\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  bottleneck         pkgs/main/win-64::bottleneck-1.3.7-py38h9128911_0 \n",
+      "  pandas             pkgs/main/win-64::pandas-2.0.3-py38h4ed8f06_0 \n",
+      "  python-tzdata      pkgs/main/noarch::python-tzdata-2023.3-pyhd3eb1b0_0 \n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages: ...working... done\n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "conda install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -231,7 +276,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +386,7 @@
        "4  [(Changi, NNP), (Airport, NNP), (will, MD), (s...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,9 +469,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package words to\n",
+      "[nltk_data]     C:\\Users\\wongw\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n",
+      "[nltk_data] Downloading package maxent_ne_chunker to\n",
+      "[nltk_data]     C:\\Users\\wongw\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -546,18 +603,6 @@
       "  https/NN\n",
       "  //cna.asia/telegram/NN)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package words to\n",
-      "[nltk_data]     C:\\Users\\wongw\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package words is already up-to-date!\n",
-      "[nltk_data] Downloading package maxent_ne_chunker to\n",
-      "[nltk_data]     C:\\Users\\wongw\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n"
-     ]
     }
    ],
    "source": [
@@ -605,139 +650,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: spacy in c:\\python312\\lib\\site-packages (3.8.2)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\python312\\lib\\site-packages (from spacy) (3.0.12)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\python312\\lib\\site-packages (from spacy) (1.0.5)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\python312\\lib\\site-packages (from spacy) (1.0.10)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\python312\\lib\\site-packages (from spacy) (2.0.8)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\python312\\lib\\site-packages (from spacy) (3.0.9)\n",
-      "Requirement already satisfied: thinc<8.4.0,>=8.3.0 in c:\\python312\\lib\\site-packages (from spacy) (8.3.2)\n",
-      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in c:\\python312\\lib\\site-packages (from spacy) (1.1.3)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\python312\\lib\\site-packages (from spacy) (2.4.8)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\python312\\lib\\site-packages (from spacy) (2.0.10)\n",
-      "Requirement already satisfied: weasel<0.5.0,>=0.1.0 in c:\\python312\\lib\\site-packages (from spacy) (0.4.1)\n",
-      "Requirement already satisfied: typer<1.0.0,>=0.3.0 in c:\\python312\\lib\\site-packages (from spacy) (0.13.0)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\python312\\lib\\site-packages (from spacy) (4.66.5)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\python312\\lib\\site-packages (from spacy) (2.31.0)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in c:\\python312\\lib\\site-packages (from spacy) (2.9.2)\n",
-      "Requirement already satisfied: jinja2 in c:\\python312\\lib\\site-packages (from spacy) (3.1.4)\n",
-      "Requirement already satisfied: setuptools in c:\\python312\\lib\\site-packages (from spacy) (75.3.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\wongw\\appdata\\roaming\\python\\python312\\site-packages (from spacy) (24.0)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\python312\\lib\\site-packages (from spacy) (3.4.1)\n",
-      "Requirement already satisfied: numpy>=1.19.0 in c:\\python312\\lib\\site-packages (from spacy) (2.0.2)\n",
-      "Requirement already satisfied: language-data>=1.2 in c:\\python312\\lib\\site-packages (from langcodes<4.0.0,>=3.2.0->spacy) (1.2.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\python312\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.23.4 in c:\\python312\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (2.23.4)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in c:\\python312\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (4.11.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\python312\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\python312\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\python312\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.2.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\python312\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2024.2.2)\n",
-      "Requirement already satisfied: blis<1.1.0,>=1.0.0 in c:\\python312\\lib\\site-packages (from thinc<8.4.0,>=8.3.0->spacy) (1.0.1)\n",
-      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\python312\\lib\\site-packages (from thinc<8.4.0,>=8.3.0->spacy) (0.1.5)\n",
-      "Requirement already satisfied: colorama in c:\\users\\wongw\\appdata\\roaming\\python\\python312\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy) (0.4.6)\n",
-      "Requirement already satisfied: click>=8.0.0 in c:\\python312\\lib\\site-packages (from typer<1.0.0,>=0.3.0->spacy) (8.1.7)\n",
-      "Requirement already satisfied: shellingham>=1.3.0 in c:\\python312\\lib\\site-packages (from typer<1.0.0,>=0.3.0->spacy) (1.5.4)\n",
-      "Requirement already satisfied: rich>=10.11.0 in c:\\python312\\lib\\site-packages (from typer<1.0.0,>=0.3.0->spacy) (13.9.4)\n",
-      "Requirement already satisfied: cloudpathlib<1.0.0,>=0.7.0 in c:\\python312\\lib\\site-packages (from weasel<0.5.0,>=0.1.0->spacy) (0.20.0)\n",
-      "Requirement already satisfied: smart-open<8.0.0,>=5.2.1 in c:\\python312\\lib\\site-packages (from weasel<0.5.0,>=0.1.0->spacy) (7.0.5)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\python312\\lib\\site-packages (from jinja2->spacy) (2.1.5)\n",
-      "Requirement already satisfied: marisa-trie>=0.7.7 in c:\\python312\\lib\\site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy) (1.2.1)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\python312\\lib\\site-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\wongw\\appdata\\roaming\\python\\python312\\site-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (2.18.0)\n",
-      "Requirement already satisfied: wrapt in c:\\python312\\lib\\site-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.1.0->spacy) (1.16.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\python312\\lib\\site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (0.1.2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Channels:\n",
+      " - defaults\n",
+      " - conda-forge\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
       "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "# All requested packages already installed.\n",
+      "\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install spacy"
+    "conda install spacy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting en-core-web-sm==3.8.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-      "     ---------------------------------------- 0.0/12.8 MB ? eta -:--:--\n",
-      "     ---------------------------------------- 0.0/12.8 MB ? eta -:--:--\n",
-      "     --------------------------------------- 0.0/12.8 MB 393.8 kB/s eta 0:00:33\n",
-      "     --------------------------------------- 0.1/12.8 MB 804.6 kB/s eta 0:00:16\n",
-      "      --------------------------------------- 0.2/12.8 MB 1.2 MB/s eta 0:00:11\n",
-      "     - -------------------------------------- 0.6/12.8 MB 2.8 MB/s eta 0:00:05\n",
-      "     --- ------------------------------------ 1.0/12.8 MB 3.8 MB/s eta 0:00:04\n",
-      "     ---- ----------------------------------- 1.3/12.8 MB 4.3 MB/s eta 0:00:03\n",
-      "     ------ --------------------------------- 2.0/12.8 MB 5.5 MB/s eta 0:00:02\n",
-      "     ------ --------------------------------- 2.0/12.8 MB 4.9 MB/s eta 0:00:03\n",
-      "     -------- ------------------------------- 2.7/12.8 MB 6.0 MB/s eta 0:00:02\n",
-      "     --------- ------------------------------ 3.2/12.8 MB 6.3 MB/s eta 0:00:02\n",
-      "     ---------- ----------------------------- 3.4/12.8 MB 6.5 MB/s eta 0:00:02\n",
-      "     ----------- ---------------------------- 3.8/12.8 MB 6.3 MB/s eta 0:00:02\n",
-      "     ------------ --------------------------- 4.2/12.8 MB 6.5 MB/s eta 0:00:02\n",
-      "     -------------- ------------------------- 4.5/12.8 MB 6.7 MB/s eta 0:00:02\n",
-      "     --------------- ------------------------ 4.8/12.8 MB 6.7 MB/s eta 0:00:02\n",
-      "     --------------- ------------------------ 5.1/12.8 MB 6.7 MB/s eta 0:00:02\n",
-      "     ---------------- ----------------------- 5.2/12.8 MB 6.4 MB/s eta 0:00:02\n",
-      "     ----------------- ---------------------- 5.7/12.8 MB 6.6 MB/s eta 0:00:02\n",
-      "     ------------------ --------------------- 5.8/12.8 MB 6.6 MB/s eta 0:00:02\n",
-      "     ------------------ --------------------- 6.0/12.8 MB 6.3 MB/s eta 0:00:02\n",
-      "     -------------------- ------------------- 6.6/12.8 MB 6.6 MB/s eta 0:00:01\n",
-      "     ---------------------- ----------------- 7.1/12.8 MB 6.6 MB/s eta 0:00:01\n",
-      "     ----------------------- ---------------- 7.5/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     ----------------------- ---------------- 7.6/12.8 MB 6.9 MB/s eta 0:00:01\n",
-      "     ------------------------- -------------- 8.2/12.8 MB 6.9 MB/s eta 0:00:01\n",
-      "     -------------------------- ------------- 8.6/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     --------------------------- ------------ 8.8/12.8 MB 6.9 MB/s eta 0:00:01\n",
-      "     ---------------------------- ----------- 9.2/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     ------------------------------ --------- 9.6/12.8 MB 7.1 MB/s eta 0:00:01\n",
-      "     ------------------------------ --------- 9.9/12.8 MB 7.1 MB/s eta 0:00:01\n",
-      "     ------------------------------- -------- 10.0/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     ------------------------------- -------- 10.1/12.8 MB 6.8 MB/s eta 0:00:01\n",
-      "     ------------------------------- -------- 10.2/12.8 MB 6.6 MB/s eta 0:00:01\n",
-      "     -------------------------------- ------- 10.4/12.8 MB 7.1 MB/s eta 0:00:01\n",
-      "     -------------------------------- ------- 10.5/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------- ----- 10.9/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------- ----- 11.1/12.8 MB 7.1 MB/s eta 0:00:01\n",
-      "     ------------------------------------ --- 11.7/12.8 MB 7.3 MB/s eta 0:00:01\n",
-      "     ------------------------------------ --- 11.7/12.8 MB 7.2 MB/s eta 0:00:01\n",
-      "     ------------------------------------- -- 11.9/12.8 MB 6.8 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  12.6/12.8 MB 7.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  12.6/12.8 MB 6.9 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  12.7/12.8 MB 6.5 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 12.8/12.8 MB 6.5 MB/s eta 0:00:00\n",
-      "\u001b[38;5;2m[+] Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('en_core_web_sm')\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Traceback (most recent call last):\n",
+      "  File \"<frozen runpy>\", line 189, in _run_module_as_main\n",
+      "  File \"<frozen runpy>\", line 148, in _get_module_details\n",
+      "  File \"<frozen runpy>\", line 112, in _get_module_details\n",
+      "  File \"C:\\Users\\wongw\\AppData\\Roaming\\Python\\Python311\\site-packages\\spacy\\__init__.py\", line 6, in <module>\n",
+      "    from .errors import setup_default_warnings\n",
+      "  File \"C:\\Users\\wongw\\AppData\\Roaming\\Python\\Python311\\site-packages\\spacy\\errors.py\", line 3, in <module>\n",
+      "    from .compat import Literal\n",
+      "  File \"C:\\Users\\wongw\\AppData\\Roaming\\Python\\Python311\\site-packages\\spacy\\compat.py\", line 4, in <module>\n",
+      "    from thinc.util import copy_array\n",
+      "  File \"C:\\Users\\wongw\\AppData\\Roaming\\Python\\Python311\\site-packages\\thinc\\__init__.py\", line 2, in <module>\n",
+      "    import numpy\n",
+      "ModuleNotFoundError: No module named 'numpy'\n"
      ]
     }
    ],
@@ -747,7 +706,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - defaults\n",
+      " - conda-forge\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "conda install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +743,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspacy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m displacy\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01men_core_web_sm\u001b[39;00m\n\u001b[0;32m      6\u001b[0m nlp \u001b[38;5;241m=\u001b[39m en_core_web_sm\u001b[38;5;241m.\u001b[39mload()\n",
+      "Cell \u001b[1;32mIn[13], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mspacy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m displacy\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01men_core_web_sm\u001b[39;00m\n\u001b[0;32m      6\u001b[0m nlp \u001b[38;5;241m=\u001b[39m en_core_web_sm\u001b[38;5;241m.\u001b[39mload()\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'en_core_web_sm'"
      ]
     }
@@ -773,17 +759,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "en_core_web_sm model is not installed. Please install it using `python -m spacy download en_core_web_sm`.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "\n",
@@ -1013,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
